--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     text-align: center;
     padding-top: 40px;
 }
-#text2 {
+.text2 {
     text-align: center;
     font-size:50px;
 }
@@ -49,4 +49,8 @@ body {
     margin-top: 90px;
     font-size: 70px;
     float: left;
+}
+.textalt {
+    margin-top: 150px;
+    margin-left: 50%;
 }
